# Krishi_Sakhi

./: .env  README.md  app.py  pyproject.toml  requirements.txt  test_gemini.py
instance/: krishi_sakhi.db
static/css/: style.css
static/images/: robot.jfif
static/js/: app.js
templates/: activities.html  base.html  chat.html  dashboard.html  index.html  login.html  market_prices.html  profile.html  profile_setup.html  signup.html  weather.html
