[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-babel>=4.0.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "google-genai>=1.38.0",
    "gtts>=2.5.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "speechrecognition>=3.14.3",
]
